# NovelEngine

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js  一键打包.bat  一键运行.bat  创建桌面快捷方式.bat
dev-fixtures/: test-catalog.html  test-chapter.html  test-rank-hot.html  test-rank-new.html  test-search.html
docs/: ENGINEERING.md  INSTALL.md  STORAGE.md
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/: book_source.schema.json  builtin_sources.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: books.rs  mod.rs  notes.rs  search.rs  settings.rs  sources.rs
src-tauri/src/crawler/: mod.rs  searcher.rs
src-tauri/src/services/: discovery.rs  mod.rs  notes.rs  read.rs  settings.rs  source.rs
src-tauri/src/spider/: auto_detector.rs  cleaner.rs  detect_log.rs  fetcher.rs  gutenberg.rs  mod.rs  openlibrary.rs  parser.rs  pinyin_restore.rs  pipeline_test.rs  rendered_fetch.rs  rule.rs  rule_schema.rs  standardebooks.rs  text_conv.rs  url_analyzer.rs  wikisource.rs
src-tauri/src/spider/fixtures/: auto_detect_content.html  auto_detect_home.html  auto_detect_search.html  auto_detect_toc.html  test_chapter_page2.html  test_rule.json
src-tauri/src/spider/providers/: gutenberg.rs  mod.rs  openlibrary.rs  standardebooks.rs  wikisource.rs
src-tauri/src/storage/: books.rs  chapters.rs  content_cache.rs  db.rs  local_import.rs  mod.rs  notes.rs  settings.rs  shelf.rs  sources.rs
src-tauri/src/utils/: error.rs  mod.rs  webview2.rs
src-tauri/windows/: installer-hooks.nsh
(+69 files in other folders)
