[package]
name = "novel-reader-core"
version = "0.1.0"
description = "通用书源解析引擎 + 桌面阅读器"
authors = ["you"]
edition = "2021"
repository = "https://github.com/onacufel87-cmd/NovelEngine"
homepage = "https://github.com/onacufel87-cmd/NovelEngine"
license = "MIT"

[lib]
name = "novel_reader_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 网络请求（初期使用 blocking 简化开发）
reqwest = { version = "0.12", features = ["blocking", "cookies"] }
# HTML 解析
scraper = "0.22"
# 正文清洗正则
regex = "1"
# 本地 SQLite 存储
rusqlite = { version = "0.32", features = ["bundled"] }
# 网页编码转换（gbk 等）
encoding_rs = "0.8"
# 相对 URL 转绝对 URL（正文分页）
url = "2"
# 导出路径（用户文档目录）
directories = "5"
# 本地 EPUB 解析
epub = "2"
# 简繁转换（OpenCC 词表）
zhconv = "0.3"

[profile.dev]
# 开发时降低优化等级，加快编译
opt-level = 1
